--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
+	display: flex;
+	flex-direction: column;
   background-color: #f3f3f3;
   min-height: 100%;
 }
@@ -54,6 +56,8 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+	display: flex;
+	align-items: center;
 }
 nav h1 {
   margin: auto;
@@ -105,6 +109,9 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+	display:flex;
+	flex-direction: row;
+	justify-content: center;
   width: 100%;
   height: 50px;
   background-color: #3397DB;
@@ -136,6 +143,11 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+/*box in the center on the last line*/
+	justify-content: center;
 }
 #restaurants-list li {
   background-color: #fff;
