--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,11 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+.inside #maincontent {
+	max-width: 100%;
+	display: flex;
+	flex-direction: column;
+}
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
