--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	flex-direction: column;
   background-color: #f3f3f3;
   min-height: 100%;
+	max-width: 100%;
 }
 #footer {
   background-color: #444;
@@ -70,13 +71,12 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-		text-align: center;
-		max-width: 100%;
+	padding: 10px 40px 16px;
+	list-style: none;
+	background-color: #eee;
+	font-size: 17px;
+	margin: 0;
+	width: calc(50% - 80px);
 
 }
 
@@ -213,7 +213,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: calc(100% - 80px);
   position: fixed;
   right: 0;
   top: 80px;
@@ -227,7 +227,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: calc(50% - 50px);
 }
 #restaurant-name {
   color: #f18200;
@@ -238,6 +238,7 @@ nav h1 a {
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+	width: 90%;
 }
 #restaurant-img {
 	width: 90%;
@@ -245,6 +246,7 @@ nav h1 a {
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+	width: 90%;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -258,14 +260,17 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
+#restaurant-hours {
+	width: 90%
+}
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 140px 30px 30px 30px;
+  width: 45%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 30px 80px 30px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -287,11 +292,32 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 80%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
+}
+@media screen and (max-width: 590px) {
+	#breadcrumb {
+		width: calc(100% - 80px);
+	}
+	.inside #map-container {
+		width: 100%;
+		height: 250px;
+		top: 130px;
+		z-index: 500;
+	}
+	#restaurant-container {
+		width: calc(100% - 60px);
+		margin-top: 250PX;
+	}
+	#reviews-container {
+		width: calc(100% - 60px);
+	}
+	.inside #footer {
+		width: calc(100% - 50px);
+	}
 }
