--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #20587d;
     text-decoration: none;
 }
 
@@ -116,7 +116,7 @@ nav h1 a {
 	justify-content: center;
   width: 100%;
   height: 50px;
-  background-color: #2e7fb5;
+  background-color: #20587d;
   align-items: center;
 }
 @media screen and (max-width: 430px) {
@@ -178,7 +178,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h3 {
-  color: #f18200;
+  color: #b33300;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -192,7 +192,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: #f18200;
+  background-color: #b33300;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -230,7 +230,7 @@ nav h1 a {
   width: calc(50% - 50px);
 }
 #restaurant-name {
-  color: #f18200;
+  color: #b33300;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -273,7 +273,7 @@ nav h1 a {
   padding: 30px 30px 80px 30px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #b33300;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -306,7 +306,7 @@ nav h1 a {
 	}
 	.inside #map-container {
 		width: 100%;
-		height: 250px;
+		height: 220px;
 		top: 130px;
 		z-index: 500;
 	}
